<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label">
    </TextView>
    <EditText
        android:id="@+id/text_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/details_label">
    </TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@id/separator"
            android:text="date"/>

        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@id/date_button"
            android:layout_alignBottom="@id/date_button"
            android:layout_toEndOf="@+id/separator"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="time"/>
    </RelativeLayout>
    <CheckBox
        android:id="@+id/is_solved_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solved_label">
    </CheckBox>
    <Button
        android:id="@+id/suspect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suspect_button"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/report_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/report_button"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/call_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/call_suspect"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="end"
        android:text="@string/save_button"/>
</LinearLayout>